--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,4 @@ project(02_InflearnProject)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(02_InflearnProject
-        Chapter00/example01.cpp Chapter00/example02.cpp)
+add_executable(02_InflearnProject Chapter00/example01.cpp)
